@@ -1,3 +1,11 @@
+2010-09-10  Marek Kowalski  <mkowalski@flumotion.com>
+
+	* flumotion/component/base/http.py:
+	* flumotion/test/test_bouncers_multibouncer.py:
+	Tests for multibouncer with incorrect configuration and expiring 
+	the keycards.
+	Tracked one ugly silent fail.
+
 2010-09-08  Marek Kowalski  <mkowalski@flumotion.com>
 
         * flumotion/test/test_bouncers_multibouncer.py:
